force-app/main/default/objects/Account/fields/LT_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>LT_CNPJ__c</fullName>
    <description>Número de inscrição da empresa no Cadastro Nacional da Pessoa Jurídica, utilizado para identificação fiscal e integrações.</description>
    <externalId>true</externalId>
    <inlineHelpText>Informe o CNPJ no formato 00.000.000/0000-00.</inlineHelpText>
    <label>CNPJ</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>