force-app/main/default/objects/Account/fields/LT_Commercial_Rep__c.field-meta.xml
<CustomField>
    <fullName>LT_Commercial_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Executivo comercial (vendedor) responsável pela conta do embarcador.</description>
    <inlineHelpText>Usuário da equipe comercial responsável pela prospecção e relacionamento com este embarcador.</inlineHelpText>
    <label>Executivo Comercial</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Embarcadores (Executivo Comercial)</relationshipLabel>
    <relationshipName>LT_Commercial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>