force-app/main/default/objects/Account/fields/LT_Monthly_Volume_Estimate__c.field-meta.xml
<CustomField>
    <fullName>LT_Monthly_Volume_Estimate__c</fullName>
    <description>Volume médio mensal de pacotes que o embarcador estima enviar pela LogiTrack.</description>
    <inlineHelpText>Quantidade estimada de pacotes por mês. Usada para dimensionamento operacional e proposta comercial.</inlineHelpText>
    <label>Volume Mensal Estimado (pacotes)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>