force-app/main/default/objects/Account/fields/LT_Operating_Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>LT_Operating_Partner_Type__c</fullName>
    <description>Classifica a função exercida pela empresa dentro da rede de parceiros operacionais da LogiTrack.</description>
    <inlineHelpText>Selecione a categoria principal do parceiro operacional, como franqueado ou parceiro DropOff.</inlineHelpText>
    <label>Tipo de Parceiro Operacional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Franqueado</fullName>
            </value>
            <value>
                <fullName>Parceiro DropOff</fullName>
            </value>
            <value>
                <fullName>Operador Logístico Terceirizado</fullName>
            </value>
            <value>
                <fullName>Outro Parceiro Logístico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>