force-app/main/default/objects/Account/fields/LT_Origin_Marketplaces__c.field-meta.xml
<CustomField>
    <fullName>LT_Origin_Marketplaces__c</fullName>
    <description>Marketplaces e canais de origem dos pacotes do embarcador (ex.: Shopee, Mercado Livre, Shein).</description>
    <inlineHelpText>Liste os marketplaces/canais de origem separados por vírgula.</inlineHelpText>
    <label>Marketplaces de Origem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>