force-app/main/default/objects/Account/fields/LT_Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>LT_Partner_Status__c</fullName>
    <description>Representa a situação cadastral e operacional atual da empresa parceira dentro da rede LogiTrack.</description>
    <inlineHelpText>Selecione a situação atual do parceiro. Somente parceiros ativos poderão receber novas unidades operacionais.</inlineHelpText>
    <label>Status do Parceiro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em Credenciamento</fullName>
            </value>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Suspenso</fullName>
            </value>
            <value>
                <fullName>Encerrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>