force-app/main/default/objects/Account/fields/LT_Pickup_Type__c.field-meta.xml
<CustomField>
    <fullName>LT_Pickup_Type__c</fullName>
    <description>Define como os pacotes do embarcador entram na malha: retirada no próprio embarcador (Seller) ou entrega em ponto físico (DropOff).</description>
    <inlineHelpText>Coleta no Seller: motorista First Mile retira no embarcador. Coleta no DropOff: pacotes são deixados em um Ponto de Coleta.</inlineHelpText>
    <label>Tipo de Coleta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coleta no Seller</fullName>
            </value>
            <value>
                <fullName>Coleta no DropOff</fullName>
            </value>
            <value>
                <fullName>Ambos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>