force-app/main/default/objects/Account/fields/LT_Shipper_Segment__c.field-meta.xml
<CustomField>
    <fullName>LT_Shipper_Segment__c</fullName>
    <description>Classifica a natureza do negócio do embarcador que envia pacotes pela LogiTrack.</description>
    <inlineHelpText>Selecione o segmento de mercado do embarcador.</inlineHelpText>
    <label>Segmento do Embarcador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>E-commerce Próprio</fullName>
            </value>
            <value>
                <fullName>Indústria / Fabricante</fullName>
            </value>
            <value>
                <fullName>Varejo</fullName>
            </value>
            <value>
                <fullName>Distribuidor</fullName>
            </value>
            <value>
                <fullName>Pessoa Física (C2C)</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>