force-app/main/default/objects/Account/fields/LT_Shipper_Since__c.field-meta.xml
<CustomField>
    <fullName>LT_Shipper_Since__c</fullName>
    <description>Data em que o embarcador passou a operar de forma ativa com a LogiTrack.</description>
    <inlineHelpText>Data de início da operação ativa do embarcador.</inlineHelpText>
    <label>Embarcador Desde</label>
    <type>Date</type>
</CustomField>