force-app/main/default/objects/Account/fields/LT_Shipper_Status__c.field-meta.xml
<CustomField>
    <fullName>LT_Shipper_Status__c</fullName>
    <description>Situação comercial e operacional atual do embarcador dentro da carteira LogiTrack.</description>
    <inlineHelpText>Prospecção e Em Homologação ainda não geram faturamento; apenas Ativo participa da operação regular.</inlineHelpText>
    <label>Status do Embarcador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospecção</fullName>
            </value>
            <value>
                <fullName>Em Homologação</fullName>
            </value>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Inativo</fullName>
            </value>
            <value>
                <fullName>Encerrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>