force-app/main/default/objects/Account/fields/LT_Total_Billed__c.field-meta.xml
<CustomField>
    <fullName>LT_Total_Billed__c</fullName>
    <description>Soma do valor liquido de todos os faturamentos mensais ja faturados ou pagos do embarcador.</description>
    <label>Total Faturado (acumulado)</label>
    <summarizedField>LT_Monthly_Billing__c.LT_Net_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>LT_Monthly_Billing__c.LT_Counts_As_Billed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>LT_Monthly_Billing__c.LT_Shipper__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>