force-app/main/default/objects/Account/recordTypes/LT_Operating_Partner.recordType-meta.xml
<RecordType>
    <fullName>LT_Operating_Partner</fullName>
    <active>true</active>
    <description>Utilizado para empresas franqueadas, parceiros credenciados, operadores de DropOff e outras organizações responsáveis por unidades logísticas.</description>
    <label>Parceiro Operacional</label>
</RecordType>