force-app/main/default/objects/Account/recordTypes/LT_Shipper.recordType-meta.xml
<RecordType>
    <fullName>LT_Shipper</fullName>
    <active>true</active>
    <description>Utilizado para empresas e pessoas físicas que enviam pacotes pela LogiTrack (marketplaces, e-commerces, indústrias, varejistas e clientes C2C).</description>
    <label>Embarcador</label>
</RecordType>