force-app/main/default/objects/Account/validationRules/LT_Active_Shipper_Requires_Rep.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Active_Shipper_Requires_Rep</fullName>
    <active>true</active>
    <description>Embarcador Ativo precisa ter um Executivo Comercial responsável.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;LT_Shipper&quot;,
    ISPICKVAL(LT_Shipper_Status__c, &quot;Ativo&quot;),
    ISBLANK(LT_Commercial_Rep__c)
)</errorConditionFormula>
    <errorDisplayField>LT_Commercial_Rep__c</errorDisplayField>
    <errorMessage>Defina o Executivo Comercial responsável antes de ativar o embarcador.</errorMessage>
</ValidationRule>