force-app/main/default/objects/Account/validationRules/LT_Require_CNPJ_For_Business_Shipper.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Require_CNPJ_For_Business_Shipper</fullName>
    <active>true</active>
    <description>Exige CNPJ para embarcadores pessoa jurídica (todos os segmentos, exceto Pessoa Física C2C).</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;LT_Shipper&quot;,
    NOT(ISPICKVAL(LT_Shipper_Segment__c, &quot;Pessoa Física (C2C)&quot;)),
    ISBLANK(LT_CNPJ__c)
)</errorConditionFormula>
    <errorDisplayField>LT_CNPJ__c</errorDisplayField>
    <errorMessage>Informe o CNPJ do embarcador. Apenas embarcadores do segmento Pessoa Física (C2C) são dispensados.</errorMessage>
</ValidationRule>