force-app/main/default/objects/Account/validationRules/LT_Require_CNPJ_For_Operating_Partner.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Require_CNPJ_For_Operating_Partner</fullName>
    <active>true</active>
    <description>Exige o preenchimento do CNPJ para Accounts do Record Type Parceiro Operacional.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;LT_Operating_Partner&quot;,
    ISBLANK(LT_CNPJ__c)
)</errorConditionFormula>
    <errorDisplayField>LT_CNPJ__c</errorDisplayField>
    <errorMessage>Informe o CNPJ da empresa parceira.</errorMessage>
</ValidationRule>