force-app/main/default/objects/Account/validationRules/LT_Require_Operating_Partner_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Require_Operating_Partner_Type</fullName>
    <active>true</active>
    <description>Exige o preenchimento do Tipo de Parceiro Operacional para Accounts do Record Type Parceiro Operacional.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;LT_Operating_Partner&quot;,
    ISBLANK(TEXT(LT_Operating_Partner_Type__c))
)</errorConditionFormula>
    <errorDisplayField>LT_Operating_Partner_Type__c</errorDisplayField>
    <errorMessage>Informe o Tipo de Parceiro Operacional para esta empresa.</errorMessage>
</ValidationRule>