force-app/main/default/objects/Account/validationRules/LT_Require_Partner_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Require_Partner_Status</fullName>
    <active>true</active>
    <description>Exige o preenchimento do Status do Parceiro para Accounts do Record Type Parceiro Operacional.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;LT_Operating_Partner&quot;,
    ISBLANK(TEXT(LT_Partner_Status__c))
)</errorConditionFormula>
    <errorDisplayField>LT_Partner_Status__c</errorDisplayField>
    <errorMessage>Informe o Status do Parceiro para esta empresa.</errorMessage>
</ValidationRule>