force-app/main/default/objects/Account/validationRules/LT_Require_Segment_For_Shipper.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Require_Segment_For_Shipper</fullName>
    <active>true</active>
    <description>Exige o Segmento do Embarcador nas contas do Record Type Embarcador.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;LT_Shipper&quot;,
    ISBLANK(TEXT(LT_Shipper_Segment__c))
)</errorConditionFormula>
    <errorDisplayField>LT_Shipper_Segment__c</errorDisplayField>
    <errorMessage>Informe o Segmento do Embarcador.</errorMessage>
</ValidationRule>