force-app/main/default/objects/Account/validationRules/LT_Require_Status_For_Shipper.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Require_Status_For_Shipper</fullName>
    <active>true</active>
    <description>Exige o Status do Embarcador nas contas do Record Type Embarcador.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = "LT_Shipper",
    ISBLANK(TEXT(LT_Shipper_Status__c))
)</errorConditionFormula>
    <errorDisplayField>LT_Shipper_Status__c</errorDisplayField>
    <errorMessage>Informe o Status do Embarcador.</errorMessage>
</ValidationRule>