force-app/main/default/objects/Account/validationRules/LT_Validate_CNPJ_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Validate_CNPJ_Format</fullName>
    <active>true</active>
    <description>Valida se o CNPJ foi informado com 14 dígitos e a máscara padrão 00.000.000/0000-00.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(LT_CNPJ__c)),
    NOT(
        REGEX(
            LT_CNPJ__c,
            &quot;^[0-9]{2}[.][0-9]{3}[.][0-9]{3}/[0-9]{4}-[0-9]{2}$&quot;
        )
    )
)</errorConditionFormula>
    <errorDisplayField>LT_CNPJ__c</errorDisplayField>
    <errorMessage>Informe o CNPJ no formato 00.000.000/0000-00.</errorMessage>
</ValidationRule>