force-app/main/default/objects/Account/listViews/LT_Active_Operating_Partners.listView-meta.xml
<ListView>
    <fullName>LT_Active_Operating_Partners</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>LT_Operating_Partner_Type__c</columns>
    <columns>LT_CNPJ__c</columns>
    <columns>LT_Partner_Status__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ACCOUNT.EMPLOYEES</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.LT_Operating_Partner</value>
    </filters>
    <filters>
        <field>LT_Partner_Status__c</field>
        <operation>equals</operation>
        <value>Ativo</value>
    </filters>
    <label>Parceiros Operacionais Ativos</label>
</ListView>